--- a/src/app/templates/admin/balance.html
+++ b/src/app/templates/admin/balance.html
@@ -4,45 +4,43 @@
 
 {% block body %}
 
-    <div class="container">
-        <div class="row pb-md-3">
-            <div class="col-md-2">User</div>
-            <div class="col-md-4">Change of balance</div>
-        </div>
-        <form method=post enctype=multipart/form-data action="">
-            <div class="row">
-                <div class="form-group col-md-2">
-                    <select class="form-control" id="username" name="username">
-                        {% for user in users %}
-                            <option>{{ user }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-                <div class="form-group col-md-2">
-                    <input type="number" step="0.01" min="0" class="form-control" id="amount" name="added">
-                </div>
-                <div class="form-group col-md-2">
-                    <button type="submit" value=submit class="btn btn-outline-primary">Increase balance</button>
-                </div>
-            </div>
-        </form>
-        <form method=post enctype=multipart/form-data action="">
-            <div class="row">
-                <div class="form-group col-md-2">
-                    <select class="form-control" id="username" name="username">
-                        {% for user in users %}
-                            <option>{{ user }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-                <div class="form-group col-md-2">
-                    <input type="number" step="0.01" min="0" class="form-control" id="amount" name="removed">
-                </div>
-                <div class="form-group col-md-2">
-                    <button type="submit" value=submit class="btn btn-outline-primary">Decrease balance</button>
-                </div>
-            </div>
-        </form>
+    <div class="row justify-content-center mt-4 pb-md-3">
+        <div class="col-md-2">User</div>
+        <div class="col-md-4">Change of balance</div>
     </div>
+    <form method=post enctype=multipart/form-data action="">
+        <div class="row justify-content-center">
+            <div class="form-group col-md-2">
+                <select class="form-control" id="username" name="username">
+                    {% for user in users %}
+                        <option>{{ user }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="form-group col-md-2">
+                <input type="number" step="0.01" min="0" class="form-control" id="amount" name="added">
+            </div>
+            <div class="form-group col-md-2">
+                <button type="submit" value=submit class="btn btn-outline-primary">Increase balance</button>
+            </div>
+        </div>
+    </form>
+    <form method=post enctype=multipart/form-data action="">
+        <div class="row justify-content-center">
+            <div class="form-group col-md-2">
+                <select class="form-control" id="username" name="username">
+                    {% for user in users %}
+                        <option>{{ user }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="form-group col-md-2">
+                <input type="number" step="0.01" min="0" class="form-control" id="amount" name="removed">
+            </div>
+            <div class="form-group col-md-2">
+                <button type="submit" value=submit class="btn btn-outline-primary">Decrease balance</button>
+            </div>
+        </div>
+    </form>
 
 {% endblock %}
