--- a/src/app/templates/admin/deposit.html
+++ b/src/app/templates/admin/deposit.html
@@ -4,33 +4,29 @@
 
 {% block body %}
 
-    <div class="container-fluid">
-
-        <div class="row justify-content-center">
-            <div class="col-xl-6 col-lg-8">
-                <table class="table">
-                    <thead class="thead-light">
+    <div class="row justify-content-center mt-4">
+        <div class="col-xl-6 col-lg-8">
+            <table class="table">
+                <thead class="thead-light">
+                    <tr>
+                        <th scope="col">User</th>
+                        <th scope="col">Amount</th>
+                        <th scope="col">Admin</th>
+                        <th scope="col">Date</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for deposit in deposits %}
                         <tr>
-                            <th scope="col">User</th>
-                            <th scope="col">Amount</th>
-                            <th scope="col">Admin</th>
-                            <th scope="col">Date</th>
+                            <td>{{ deposit['user'] }}</td>
+                            <td>{{ deposit['amount'] }}</td>
+                            <td>{{ deposit['admin'] }}</td>
+                            <td>{{ deposit['timestamp'] | time_string }}</td>
                         </tr>
-                    </thead>
-                    <tbody>
-                        {% for deposit in deposits %}
-                            <tr>
-                                <td>{{ deposit['user'] }}</td>
-                                <td>{{ deposit['amount'] }}</td>
-                                <td>{{ deposit['admin'] }}</td>
-                                <td>{{ deposit['timestamp'] | time_string }}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
-
     </div>
 
 {% endblock %}
