--- a/src/app/templates/admin/reroute.html
+++ b/src/app/templates/admin/reroute.html
@@ -5,7 +5,7 @@
 {% block body %}
 
     <form method=post enctype=multipart/form-data action="" id="mett">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mt-4">
             <div class="form-group col-md-2">
                 <label for="username">Current user</label>
                 <select class="form-control" id="username" name="username">
