--- a/src/app/templates/dashboard.html
+++ b/src/app/templates/dashboard.html
@@ -2,56 +2,28 @@
 
 {% set active_page = "Dashboard" %}
 
+{% from "macros/cards.html" import bun_order_card %}
+
 {% block body %}
 
-    <div class="container">
-        <p>Welcome {{ username }}! This is home.<br />Your current balance is {{ balance | round(2) }}.</p>
+    <div class="row justify-content-start mt-4">
+        <div class="col-xl-3 col-lg-4 col-md-5 offset-xl-3 offset-lg-2 offset-md-1">
+            <h5>Hi {{ username }}</h5>
+            <div>Your current cash total is {{ balance | round(2) }} $</div>
+        </div>
+    </div>
 
-            <div class="row">
-                <div class="col col-md-3">
-                    <p class="alert">Your average order</p>
-                    <table class="table">
-                        <thead class="thead-light">
-                            <tr>
-                                <th scope="col">Bun</th>
-                                <th scope="col">#</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for bun in history %}
-                                <tr>
-                                    <td scope="row">{{ bun }}</td>
-                                    <td>{{ history[bun] | round(2) }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                    <p class="alert">You have ordered a mean of {{ mean_buns | round(2) }} total buns.</p>
-                </div>
-                <div class="col col-md-3">
-                    {% if order_exists %}
-                        <p class="alert">Current Order</p>
-                        <table class="table">
-                            <thead class="thead-light">
-                                <tr>
-                                    <th scope="col">Bun</th>
-                                    <th scope="col">#</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for bun in order %}
-                                    <tr>
-                                        <td>{{ bun }}</td>
-                                        <td>{{ order[bun] }}</td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    {% else %}
-                        <p class="alert">There is no current order!</p>
-                    {% endif %}
-                </div>
-            </div>
+    <div class="row justify-content-center mt-3">
+        <div class="col-xl-3 col-lg-4 col-md-5">
+            {{ bun_order_card('Your average order', 'You have ordered a mean of {} total buns.'.format(mean_buns | round(2)), history) }}
+        </div>
+        <div class="col-xl-3 col-lg-4 col-md-5">
+            {% if order_exists %}
+                {{ bun_order_card('Current Order', 'You have currently ordered {} buns.'.format(order.values() | sum), order) }}
+            {% else %}
+                <p class="alert">There is no current order!</p>
+            {% endif %}
+        </div>
     </div>
 
 {% endblock %}
