--- a/src/app/templates/order.html
+++ b/src/app/templates/order.html
@@ -2,42 +2,30 @@
 
 {% set active_page = "Order" %}
 
+{% from "macros/cards.html" import bun_order_card %}
+
 {% block body %}
 
-    <div class="row justify-content-center">
-        <div class="col-xl-4 col-lg-6 col-md-10">
+    <div class="row justify-content-center mt-2">
+        <div class="col-xl-2 col-lg-3 col-md-4 mt-3">
+            <div class="list-group list-group-flush">
+                <a class="list-group-item" href="{{ url_for("order/purchase") }}"><i class="fas fa-shopping-basket"></i> State purchase</a>
+                <a class="list-group-item" href="{{ url_for("order/previous") }}"><i class="fas fa-history"></i> Show ordered items</a>
+            </div>
+        </div>
+
+        <div class="col-xl-4 col-lg-5 col-md-6 mt-3">
             {% if order_exists %}
-                <div class="card">
-                    <div class="card-header bg-primary text-white">Current total order</div>
-                    <div class="card-body p-0">
-                        <table class="table mb-0">
-                            <thead class="thead-light">
-                                <tr>
-                                    <th scope="col">Bun</th>
-                                    <th scope="col">#</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for bun in buns %}
-                                    <tr>
-                                        <td>{{ bun }}</td>
-                                        <td>{{ buns[bun] }}</td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="card-footer bg-transparent">
-                        That makes {{ mett | round }} g of mett.
-                    </div>
-                </div>
+                {{ bun_order_card('Current total order', 'That makes {} g of mett.'.format(mett | round(2)), buns) }}
             {% else %}
                 <p class="alert alert-warning">There is no current order!</p>
             {% endif %}
         </div>
+    </div>
 
-        {% if allowed_to_order %}
-            <div class="col-xl-4 col-lg-6 col-md-10 mt-3">
+    {% if allowed_to_order %}
+        <div class="row justify-content-start mt-3">
+            <div class="col-xl-4 col-lg-8 col-md-10 offset-xl-5 offset-lg-2 offset-md-1 mt-3">
                 <form method=post enctype=multipart/form-data action="">
                     <div class="form-row">
                         <label for="orderAmount" class="col mr-1">Number of buns</label>
@@ -55,17 +43,7 @@
                     </div>
                 </form>
             </div>
-        {% endif %}
-    </div>
-
-    <div class="row justify-content-start mt-3">
-        <div class="offset-xl-2 col-xl-2 col-lg-4 col-md-6">
-            <div class="list-group list-group-flush">
-                <a class="list-group-item" href="{{ url_for("order/purchase") }}"><i class="fas fa-shopping-basket"></i> State purchase</a>
-                <a class="list-group-item" href="{{ url_for("order/previous") }}"><i class="fas fa-history"></i> Show ordered items</a>
-            </div>
         </div>
-    </div>
-
+    {% endif %}
 
 {% endblock %}
