--- a/src/app/templates/order/previous.html
+++ b/src/app/templates/order/previous.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mt-4">
         <div class="col-xl-6 col-lg-8 col-md-10">
 
             <div class="table-responsive-md">
