--- a/src/app/templates/order/purchase.html
+++ b/src/app/templates/order/purchase.html
@@ -4,22 +4,20 @@
 
 {% block body %}
 
-    <div class="container">
-        <form method=post enctype=multipart/form-data action="">
-            <div class="row">
-                <div class="form-group col-md-2">
-                    <label for="amount">Price</label>
-                    <input type="number" step="0.01" min="0" class="form-control" id="amount" name="amount">
-                </div>
-                <div class="form-group col-md-2">
-                    <label for="purpose">Purpose of purchase</label>
-                    <input type="text" class="form-control" id="purpose" name="purpose">
-                </div>
+    <form method=post enctype=multipart/form-data action="">
+        <div class="row justify-content-center mt-4">
+            <div class="form-group col-md-2">
+                <label for="amount">Price</label>
+                <input type="number" step="0.01" min="0" class="form-control" id="amount" name="amount">
             </div>
-            <div class="row">
-                <button type="submit" value=submit class="btn btn-outline-primary">State Purpose</button>
+            <div class="form-group col-md-2">
+                <label for="purpose">Purpose of purchase</label>
+                <input type="text" class="form-control" id="purpose" name="purpose">
             </div>
-        </form>
-    </div>
+        </div>
+        <div class="row">
+            <button type="submit" value=submit class="btn btn-outline-primary">State Purpose</button>
+        </div>
+    </form>
 
 {% endblock %}
