--- a/src/app/templates/profile/profile.html
+++ b/src/app/templates/profile/profile.html
@@ -4,16 +4,16 @@
 
 {% block body %}
 
-<div class="row">
-    <div class="col-md">
+<div class="row justify-content-center mt-4">
+    <div class="col-xl-6 col-lg-8 col-md-10">
         <h3>
             Profile of {{ user.email }}
         </h3>
     </div>
 </div>
 
-<div class="row">
-    <div class="col-md">
+<div class="row justify-content-center mt-3">
+    <div class="col-xl-6 col-lg-8 col-md-10">
         <table class="table">
             <tbody>
                 <tr>
@@ -29,9 +29,9 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row justify-content-center">
 <!-- user change own password -->
-    <div class="col-md">
+    <div class="col-xl-6 col-lg-8 col-md-10">
         <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#user_change_password_modal">
             Change Password
         </button>
