--- a/src/app/templates/user.html
+++ b/src/app/templates/user.html
@@ -4,10 +4,9 @@
 
 {% block body %}
 
-<div class="container-fluid">
-    <div class="row justify-content-center">
-        <div class="col-xl-8 col-lg-10">
-            <table class="table table-hover table-responsive-md">
+    <div class="row justify-content-center mt-4">
+        <div class="col-xl-6 col-lg-8 col-md-10">
+            <table class="table table-hover">
                 <thead>
                     <tr>
                         <th scope="col">name</th>
@@ -157,7 +156,5 @@
             </form>
         </div>
     </div>
-
-</div>
 
 {% endblock %}
