--- a/src/app/templates/order/purchase.html
+++ b/src/app/templates/order/purchase.html
@@ -15,7 +15,7 @@
                 <input type="text" class="form-control" id="purpose" name="purpose">
             </div>
         </div>
-        <div class="row">
+        <div class="row justify-content-center">
             <button type="submit" value=submit class="btn btn-outline-primary">State Purpose</button>
         </div>
     </form>
