--- a/src/app/templates/security/login_user.html
+++ b/src/app/templates/security/login_user.html
@@ -6,39 +6,44 @@
 
 {% from "security/_macros.html" import render_errors %}
 
-    {{ render_errors(login_user_form.email) }}
-    {{ render_errors(login_user_form.password) }}
-
-    <center>
-    <div><h1>Login</h1></div>
-
-    <div class="panel {% if login_user_form.password.errors or login_user_form.email.errors %} panel-danger {% endif %}" style="margin: 20px; max-width: 500px">
-
-        <form action="{{ url_for_security('login') }}" method="POST" name="login_user_form">
-
-            {{ login_user_form.hidden_tag() }}
-
-            <div style="padding: 15px; margin-bottom: -15px" class="input-group">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                <input id="email" type="text" class="form-control" name="email" value="" placeholder="username" autofocus="autofocus" required>
+    {% if login_user_form.password.errors or login_user_form.email.errors %}
+        <div class="row justify-content-center mt-4">
+            <div class="col-xl-6 col-lg-8 col-md-10">
+                {{ render_errors(login_user_form.email) }}
+                {{ render_errors(login_user_form.password) }}
             </div>
+        </div>
+    {% endif %}
 
-            <div style="padding: 15px; margin-bottom: -15px" class="input-group">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                <input id="password" type="password" class="form-control" name="password" placeholder="password" required>
-            </div>
+    <div class="row justify-content-center mt-4">
+        <div class="col-xl-4 col-lg-6 col-md-8">
+            <h4 class="mb-3">Login</h4>
 
-            <div>
+            <form action="{{ url_for_security('login') }}" method="POST" name="login_user_form">
+
+                {{ login_user_form.hidden_tag() }}
+
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="fas fa-user"></i></span>
+                    </div>
+                    <input id="email" type="text" class="form-control" name="email" value="" placeholder="username" autofocus="autofocus" required>
+                </div>
+
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                    </div>
+                    <input id="password" type="password" class="form-control" name="password" placeholder="password" required>
+                </div>
+
                 <input id="next" name="next" type="hidden" value="/">
-            </div>
 
-            <div style="padding: 15px">
-                <input id="submit" name="submit" type="submit" value="Login">
-            </div>
+                <button class="btn btn-outline-primary" id="submit" name="submit" type="submit">Login</button>
 
-        </form>
+            </form>
 
+        </div>
     </div>
-    </center>
 
 {% endblock %}
