--- a/src/app/templates/admin/purchase.html
+++ b/src/app/templates/admin/purchase.html
@@ -21,16 +21,16 @@
                         <tbody>
                             {% for purchase in unprocessed %}
                                 <tr>
-                                    <td class="align-middle">{{ purchase['account'] }}</td>
-                                    <td class="align-middle">{{ purchase['price'] }}</td>
-                                    <td class="align-middle">{{ purchase['purpose'] }}</td>
+                                    <td class="align-middle">{{ purchase.account }}</td>
+                                    <td class="align-middle">{{ purchase.price }}</td>
+                                    <td class="align-middle">{{ purchase.purpose }}</td>
                                     <td>
-                                        <form action="{{ url_for("admin/purchase/authorize/<purchase_id>", purchase_id=purchase['_id']) }}" style="display:inline">
+                                        <form action="{{ url_for("admin/purchase/authorize/<purchase_id>", purchase_id=purchase.p_id) }}" style="display:inline">
                                             <button class="btn btn-outline-success" type="submit">
                                                 Authorize
                                             </button>
                                         </form>
-                                        <form action="{{ url_for("admin/purchase/decline/<purchase_id>", purchase_id=purchase['_id']) }}" style="display:inline">
+                                        <form action="{{ url_for("admin/purchase/decline/<purchase_id>", purchase_id=purchase.p_id) }}" style="display:inline">
                                             <button class="btn btn-outline-danger" type="submit">
                                                 Decline
                                             </button>
@@ -62,13 +62,13 @@
                         </thead>
                         <tbody>
                             {% for purchase in processed %}
-                                {% set table_class = 'table-success' if purchase['processed']['authorized'] else 'table-danger' %}
+                                {% set table_class = 'table-success' if purchase.processed['authorized'] else 'table-danger' %}
                                 <tr class="{{ table_class }}">
-                                    <td>{{ purchase['account'] }}</td>
-                                    <td>{{ purchase['price'] }}</td>
-                                    <td>{{ purchase['purpose'] }}</td>
-                                    <td>{{ purchase['processed']['at'] | time_string}}</td>
-                                    <td>{{ purchase['processed']['by'] }}</td>
+                                    <td>{{ purchase.account }}</td>
+                                    <td>{{ purchase.price }}</td>
+                                    <td>{{ purchase.purpose }}</td>
+                                    <td>{{ purchase.processed['at'] | time_string}}</td>
+                                    <td>{{ purchase.processed['by'] }}</td>
                                 </tr>
                             {% endfor %}
                         </tbody>
